assets/css/style.css
:root {
    --primary-color: #170055;
    --secondary-color: #3E00FF;
    --tertiary-color: #AE00FB;
    --quaternary-color: #B5FFD9;
    --senary-color: #FFCDDD;
    --septenary-color: #DADDFC;
  }

  * {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
  }
  
  body {
    color: var(--secondary-color);
    font-family: Georgia, Helvetica, Times New Roman, Arial, sans-serif;
  }  

  header {
    padding: 20px 35px;
    background-color: var(--tertiary-color);
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    z-index: 9999;
  }

  header h1 {
    font-weight: bold;
    margin: 0;
    font-size: 36px;
    color: var(--primary-color);
  }
  
  header a {
    text-decoration: none;
    color: var(--primary-color);
  }
  
  header nav {
    margin: 7px 0;
  }
  
  header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
  }
  
  header nav ul li a {
    padding: 10px 15px;
    font-weight: lighter;
    font-size: 1.55vw;
  }
  
  header nav ul li a:hover {
    background: var(--senary-color);
    color: var(--secondary-color);
    border-radius: 2000px;
  }
  
  .border-left {
    border-left: 3px solid var(--tertiary-color);
  }

  .profile-pic {
    display: flex;
    justify-content: center;
    padding: 10px 10px 10px 10px;
  }

  .profile-pic img {
    border-radius: 1000px;
    min-width: 150px;
    border: 3px solid var(--tertiary-color);
  }

  .profile-pic img:hover {
      min-width: 350px;
  }

  .about-me {
      background-color: var(--quaternary-color);
  }

.about-me-description {
    padding: 15px 30px 15px 30px;
    text-align: center;
    max-width: 80%;
    border: 3px solid var(--tertiary-color);
    border-radius: 25px;
}

.about-me-description-flex {
    display: flex;
    justify-content: center;
    align-items: center;
}

.section-title {
    color: var(--primary-color);
    border-bottom: 3px solid var(--tertiary-color);
    font-size: 36px;
    padding: 20px 0 20px 0;
    text-align: center;
    margin: 0 auto 35px auto;
    width: 50%;
  }

  .my-work-section {
    background-color: var(--septenary-color);
  }

  .container {
    position: relative;
    text-align: left;
    color: var(--tertiary-color);
  }
  
  .bottom-left {
    position: absolute;
    bottom: 8px;
    left: 16px;
    background: rgb(179, 255, 215, .6);
    padding: 20px 20px;
    border-radius: 25px;
    border: 3px solid var(--tertiary-color);
  }

  .featured-work { 
      padding: 10px 10px 10px 10px;
  }

  .featured-work img {
      max-width: 60vw;
      min-width: 40vw;
      opacity: 70%;
      border-radius: 25px;
      border: 7px solid var(--tertiary-color); 
  }

  .featured-work img:hover {
      opacity: 100%;
  }

  .work {
    padding: 10px 10px 10px 10px;
  }

  .work img {
    max-width: 40vw;
    min-width: 20vw;
    opacity: 70%;
    border-radius: 25px;
    border: 7px solid var(--tertiary-color);
  }

  .work img:hover {
      opacity: 100%;
  }

  .my-work { 
    max-width: 100vw;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    margin: 30px auto auto auto;
    list-style: none;
  }

    .border-box {
        box-sizing: border-box;  
      }

    .work-flex {
        flex: 1;
    }

  .flex-row {
    display: flex;
  }

  .my-resume {
      background-color: var(--senary-color);
  }

  .resume {
      display: flex;
      justify-content: center;
  }

  .resume img {
    opacity: 70%;
    border-radius: 25px;
    border: 7px solid var(--tertiary-color);
  }

  .resume img:hover {
      opacity: 100%;
  }

  .contact-me {
      background-color: var(--quaternary-color);
  }

  .contact-info {
    max-width: 90vw;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    color: var(--primary-color);
    font-size: 24px;
    padding: 20px 5px 20px 5px;
    margin: 30px auto auto auto;
    list-style: none;
    color: var(--secondary-color);
    background-color: var(--quaternary-color);
    border: 3px solid var(--tertiary-color);
    border-radius: 35px;
    flex: 1;
  }

  .contact-info a {
    text-decoration: none;
  }

  .contact-img {
    max-height: 2.55vw;
  }

  footer {
      background: var(--tertiary-color);
      padding: 40px 35px;
      display: flex;
      justify-content: center;
      width: 100%;
      color: var(--primary-color);
  }

  .made-with-love {
      border: 3px solid var(--primary-color);
      border-radius: 25px;
      padding: 15px 15px 15px 15px;
      background-color: var(--septenary-color);
  }

  .heart-emoji {
      font-weight: 100;
  }

  @media screen and (max-width: 980px) {
      header {
          justify-content: center;
          position: relative;
          padding-bottom: 0;
      }

      header h1 {
        width: 100%;
        text-align: center;
      }
    
      header nav ul {
        margin-top: 20px;
        width: 100%;
        justify-content: center;
      }

      header nav ul li {
        margin: 10px 10px 10px 10px;
      }

      header nav ul li a {
        font-size: 20px;
        color: var(--secondary-color);
        background: var(--senary-color);
        border-radius: 2000px; 
      }

      header nav ul li a:hover {
        background: white;
      }

      .about-me {
          font-size: 24px;
      }

      .contact-info {
          flex-direction: column;
      }

      .contact-info img {
          max-height: 8vw;    
      }
  }

  @media screen and (max-width: 768px) {
    header nav ul li {
      margin: 15px 15px 15px 15px;
    }
      
    .bottom-left {
          position: static;
          background: transparent;
          border: none;
      }
}

@media screen and (max-width: 575px) {
      header nav ul li {
        margin: 20px 20px 20px 20px;
      }
}

